fixate alcune cose

--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/ScopoProdotto.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/ScopoProdotto.tex
@@ -2,5 +2,5 @@ L'obiettivo principale del progetto \NomeProgetto{}, proposto dall'azienda \prop
 Il motivo è fortemente legato alla diffusione della pandemia di coronavirus che tutto il mondo sta vivendo ed affrontando in questo momento. Per garantire la sicurezza nell'utilizzo di ogni postazione, è richiesta quindi la creazione di un sistema software formato da due componenti principali:
 \begin{itemize}
     \item \textbf{Applicazione mobile:} attraverso un sistema di autenticazione deve offrire la possibilità di visualizzare lo stato di una postazione (libera, occupata, igienizzata, non igienizzata), prenotarne una disponibile, registrare in tempo reale l'utilizzo della stessa, così come segnalarne l'eventuale igienizzazione svolta;
-    \item \textbf{Server:} dedicato alla gestione generale del sistema, attraverso un'apposita interfaccia, deve garantire la possibilità di creare, eliminare, abilitare, disabilitare postazioni di lavoro come anche di intere aule; memorizzare in maniera certificata ed immutabile lo storico di ogni postazione; monitorare in tempo reale lo stato di ogni postazione; gestire gli utenti all'interno del sistema.
+    \item \textbf{Server centrale:} dedicato alla gestione generale del sistema, attraverso un'apposita interfaccia, deve garantire la possibilità di creare, eliminare, abilitare, disabilitare postazioni di lavoro come anche di intere aule; memorizzare in maniera certificata ed immutabile lo storico di ogni postazione; monitorare in tempo reale lo stato di ogni postazione; gestire gli utenti all'interno del sistema.
 \end{itemize}
