--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
@@ -1,4 +1,4 @@
-Si tratta della fase prima, in cui i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
+Si tratta del primo stadio relativo a quella che definiremo fase di analisi. In questa parte i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
         
         \subsubsection{Periodo di svolgimento}
         22 ottobre 2020 - 3 dicembre 2020;
