--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
@@ -1,4 +1,4 @@
-Svolte le attività preliminari, il gruppo si concentra più in dettaglio nell'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. L'obiettivo principale di questa fase è ottenere quindi il \glo{deliverable} richiesto per il primo incontro di revisione programmato. Questa fase corrisponde alla prima \glo{milestone} ufficiale del gruppo.
+Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. L'obiettivo principale di questa fase è produrre la documentazione richiesta per il primo incontro di revisione programmato. La positiva conclusione di questo stadio corrisponde di fatto alla prima \glo{milestone} ufficiale del gruppo.
         
         \subsubsection{Periodo di svolgimento}
         4 dicembre 2020 - 11 gennaio 2021;
@@ -14,7 +14,6 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio nell'a
         \subsubsection{Obiettivi}
             \begin{itemize}
                 \item verifica e correzione delle \NdP{} e dello \SdF{};
-                \item scelta del logo del gruppo;
                 \item redazione \AdR{}:
                 \begin{itemize}
                     \item studio e definizione dei casi d'uso;
@@ -34,5 +33,5 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio nell'a
                     \item calcolo del preventivo iniziale relativo allo svolgimento del lavoro;
                 \end{itemize}
                 \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-                \item consegna di tutto il materiale necessario, in vista dell'incontro con il committente per la Revisione dei Requisiti.
+                \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RR{}.
             \end{itemize}
