--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
@@ -1,4 +1,4 @@
-Da qui in poi si entra nelle fasi più pratiche di costruzione del sisema. In questa fase ci sarà una progettazione più approfondita ed una prima stesura del codice con lo scopo di mettere insieme un primo prototipo funzionante del prodotto, avente le minime funzionalità essenziali e basilari. 
+Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo stadio conclude la fase di progettazione al dettaglio ed inzia quella di sviluppo. Viene prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo funzionante del sistema, avente le minime funzionalità essenziali e basilari. 
         
         \subsubsection{Periodo di svolgimento}
         28 gennaio 2021 - 14 febbraio 2021;
@@ -15,9 +15,11 @@ Da qui in poi si entra nelle fasi più pratiche di costruzione del sisema. In qu
         \subsubsection{Obiettivi}    
         \begin{itemize}
             \item definizione completa delle strutture tramite diagrammi \glo{UML};
-            \item studio ed apprendimento degli strumenti e tecnologie necessarie;
             \item implementazione delle componenti essenziali e obbligatorie;
+            \begin{itemize}
+                \item tali componenti verranno specificati più in dettaglio nei futuri aggiornamenti del presente documento, una volta stabiliti gli incrementi necessari.
+            \end{itemize}
             \item progettazione di base delle interfacce utente;
             \item verifica del codice e delle funzionalità del prodotto;
-            \item aggiornamento continuativo e rigoroso della documentazione.
+            \item aggiornamento della documentazione.
         \end{itemize}
