--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -111,7 +111,7 @@
 \newcommand{\PdP}{\emph{Piano di progetto}}
 \newcommand{\PdQ}{\emph{Piano di qualifica}}
 \newcommand{\SP}{\emph{Specifica tecnica}}
-\newcommand{\DdP}{\emph{Definizion di prodotto}}
+\newcommand{\DdP}{\emph{Definizione di prodotto}}
 \newcommand{\G}{\emph{Glossario}}
 \newcommand{\MU}{\emph{Manuale utente}}
 \newcommand{\MS}{\emph{Manuale sviluppatore}}
