--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -1,4 +1,4 @@
-Una volta approvati i requisiti di ingresso, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso una fase intermedia. Appoggiandosi all'\AdR{}, questa fase ha lo scopo principale di definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio ed avviare la progettazione del prodotto.
+Una volta approvati i requisiti di ingresso, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la fase progettuale attraverso un primo stadio intermedio. Appoggiandosi all'\AdR{}, in questo periodo lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
         
         \subsubsection{Periodo di svolgimento}
         18 gennaio 2021 - 27 gennaio 2021;
@@ -24,5 +24,5 @@ Una volta approvati i requisiti di ingresso, in seguito all'aggiudicazione uffic
                 \item valutazione della fattibilità effettiva dell'utilizzo di tecnologia \glo{RFID};
                 \item scelta dei linguaggi e degli strumenti da utilizzare per lo sviluppo;
             \end{itemize}
-            \item aggiornamento coerente e continuativo della documentazione.
+            \item aggiornamento della documentazione.
         \end{itemize}
