add img+ organigramma almost done

--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -14,7 +14,7 @@
 \usepackage{blindtext}
 \usepackage{pgf-pie}
 \usepackage{pgfplots}
-\input{src/Comandi.tex}
+\input{./src/Comandi.tex}
 
 \begin{document}
     \copertina{}
