--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -32,8 +32,13 @@
 		\caption{Tabella di accettazione dei componenti}\\
 		\rowcolor{\primaryColor}
 		\textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Data di Accettazione}} & \textcolor{\secondaryColor}{\textbf{Firma}}\\	\endhead
-        {Elvis Murtezan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
-
+		{Elvis Murtezan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Giovanni Grigoletto} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
+		{Andrea De Tomasi} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/andrea.png}\\
+		{Alessio Trevisan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Abdelwahad Kandoul} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/abdel.png}\\
+		{Filippo Pinton} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Edoardo Caregnato} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/edoardo.png}
 	\end{longtable}
 }
 
@@ -47,11 +52,11 @@
 		\rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Matricola}} & \textcolor{\secondaryColor}{\textbf{Indirizzo di posta elettronica}}\\\endhead	
         {Elvis Murtezan} & 1096758 & {elvis.murtezan@studenti.unipd.it}\\   
-        {Giovanni Grigoletto} & 1xxxxxxx & {mail}\\    
-        {Andrea De Tomasi} & 1xxxxxxx & {mail}\\    
-        {Alessio Trevisan} & 1xxxxxxx & {mail}\\    
-        {AbdelWahad Kandoul} & 1xxxxxxx & {mail} \\    
-        {Filippo Pinton} & 1xxxxxxx & {mail}\\    
-        {Edoardo Caregnato} & 1xxxxxxx & {mail}\\       
+        {Giovanni Grigoletto} & 1175087 & {giovanni.grigoletto@studenti.unipd.it}\\    
+        {Andrea De Tomasi} & 1187099 & {andrea.detomasi@studenti.unipd.it}\\    
+        {Alessio Trevisan} & 1xxxxxxx & {alessio.trevisan@studenti.unipd.it}\\    
+        {Abdelwahad Kandoul} & 1120176 & {abdelwahad.kandoul@studenti.unipd.it} \\    
+        {Filippo Pinton} & 1xxxxxxx & {filippo.pinton@studenti.unipd.it}\\    
+        {Edoardo Caregnato} & 1096077 & {edoardo.caregnato@studenti.unipd.it}\\       
 	\end{longtable}
 }
