Rimosso numero progressivo UC
Rimosso numero progressivo UC, in attesa di uniformare gli UC prodotti non appena saranno tutti disponibili

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC 11 - Stato Postazioni}
+\subsubsection{UC - Stato Postazioni}
 
 \begin{figure}[h]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC11.png}
-  \caption{UC11  - Stato prenotazioni}
+  \caption{UC  - Stato prenotazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di prenotazione delle prenotazioni da parte di un utilizzatore dell’applicazione.
@@ -20,7 +20,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.1 - Marca postazione igienizzata}
+\subsubsection{UC .1 - Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, igienizzatore, amministratore;
@@ -38,7 +38,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.2 - Marca postazione sporca}
+\subsubsection{UC .2 - Marca postazione sporca}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
@@ -56,7 +56,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 \newpage
-\subsubsection{UC11.3 - Marca postazione libera}
+\subsubsection{UC .3 - Marca postazione libera}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
@@ -74,7 +74,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.4 - Marca postazione occupata}
+\subsubsection{UC .4 - Marca postazione occupata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
@@ -92,7 +92,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.5 - Conferma prenotazione della postazione}
+\subsubsection{UC .5 - Conferma prenotazione della postazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
@@ -106,7 +106,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.6 - Contrassegna postazione disabilitata}
+\subsubsection{UC .6 - Contrassegna postazione disabilitata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
@@ -121,7 +121,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC11.7 - Contrassegna postazione abilitata}
+\subsubsection{UC .7 - Contrassegna postazione abilitata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
