--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC 40 - Igienizzazione Postazioni}
+\subsubsection{UC - Igienizzazione Postazioni}
 
 \begin{figure}[h]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC40.png}
-  \caption{UC40  - Igienizzazione postazioni}
+  \caption{UC  - Igienizzazione postazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di igienizzazione delle postazioni da parte di un utente igienizzatore all'interno dell’applicazione.
@@ -20,7 +20,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC40.1 - Marca postazione igienizzata}
+\subsubsection{UC .1 - Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -35,7 +35,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC40.2 - Annulla postazione igienizzata}
+\subsubsection{UC .2 - Annulla postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -50,7 +50,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{UC40.3 - Marca stanza igienizzata}
+\subsubsection{UC .3 - Marca stanza igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -68,7 +68,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{UC40.4 - Marca stanza non igienizzata}
+\subsubsection{UC .4 - Marca stanza non igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -83,7 +83,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC40.5 - Disabilita stanza}
+\subsubsection{UC .5 - Disabilita stanza}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
