--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC 5 - Creazione di una prenotazione}
+\subsubsection{UC - Creazione di una prenotazione}
 
 \begin{figure}[h]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC5.png}
-  \caption{UC5  - Creazione di una prenotazione}
+  \caption{UC  - Creazione di una prenotazione}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di gestione delle prenotazioni da parte di un utente autenticato nell’applicazione.
@@ -21,7 +21,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC5.1 - Creazione di una prenotazione}
+\subsubsection{UC .1 - Creazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
@@ -39,7 +39,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC5.2 - Modifica di una prenotazione}
+\subsubsection{UC .2 - Modifica di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
@@ -57,7 +57,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC5.3 - Cancellazione di una prenotazione}
+\subsubsection{UC .3 - Cancellazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
@@ -74,7 +74,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC5.4 - Visualizzazione di una prenotazione}
+\subsubsection{UC .4 - Visualizzazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
@@ -91,7 +91,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC5.5 - Cancellazione di una prenotazione}
+\subsubsection{UC .5 - Cancellazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
