--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoValidazioneCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoValidazioneCollaudo.tex
@@ -54,7 +54,7 @@ Quanto segnato fra parentesi e dopo il segno di addizione, in ogni cella, corris
 }
 
 \subsubsection{Conclusioni}
-Come riportato dalla tabella, il bilancio risulta essere particolarmente diverso da quello preventivato per i tutti i ruoli, ad eccezione di amministratore e progettista che hanno avuto variazioni rispettivamente di una e due ore. \\
+Come riportato dalla tabella, il bilancio risulta essere particolarmente diverso da quello preventivato per i tutti i ruoli, ad eccezione di \glo{amministratore} e \glo{progettista} che hanno avuto variazioni rispettivamente di una e due ore. \\
 In particolar modo:
 \begin{itemize}
 	\item \textbf{Responsabile}: Il ruolo di \Responsabile{} ha richiesto meno ore di quante previste, in quanto le decisioni più importanti erano già state prese fino alla precedente milestone di Product Baseline, inoltre il loro ruolo di gestione della pianificazione è servito di meno, in quanto la pianificazione è stata abbondantemente rispettata;
@@ -63,7 +63,7 @@ In particolar modo:
 	\item \textbf{Verificatore}: Visto il trascorso del gruppo, si è deciso di dare più peso al ruolo del verificatore, ancor di più di quanto già abbondantemente preventivato.
 \end{itemize}
 \subsubsection{Ragionamento sugli scostamenti}
-È possibile notare come i ruoli di progettista e amministratore siano stati sufficientemente pianificati correttamente e che invece era necessario dare più peso al ruolo di programmatore e verificatore. Questa considerazione poteva essere fatta fin dal principio, considerando la fase in cui ci si trova.\newline
+È possibile notare come i ruoli di progettista e  siano stati sufficientemente pianificati correttamente e che invece era necessario dare più peso al ruolo di programmatore e verificatore. Questa considerazione poteva essere fatta fin dal principio, considerando la fase in cui ci si trova.\newline
 Nonostante gli scostamenti, si è comunque avuto un quasi pareggio del costo effettivo con quello preventivato. La differenza è solo di \euro{} 1.
 
 \subsubsection{Preventivo a finire}
