--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
@@ -21,4 +21,4 @@ Gli aspetti su cui ci si è maggiormente concentrati sono:
     \end{itemize}
     
 \subsubsection{Identificazione del problema}
-    Per velocizzare l'intero processo, è importante stabilire delle eventuali strategie anche per la rilevazione di ogni possibile problema conosciuto.
+    Per velocizzare l'intero \glo{processo}, è importante stabilire delle eventuali strategie anche per la rilevazione di ogni possibile problema conosciuto.
