--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -35,7 +35,7 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Munirsi al più presto del necessario. Qualora non fosse possibile altri membri del gruppo prenderanno in carico le relative mansioni, affidando all'interessato quelle che non hanno necessità dell'elemento in questione. \\
         \hline
         RTd &
-        Mancata comprensione di alcuni requisiti richiesti dal progetto. &
+        Mancata comprensione di alcuni \glo{requisiti} richiesti dal progetto. &
         media &
         alta &
         Comunicare quanto prima al gruppo qualunque cosa non sia stata ben capita dalla persona in questione. &
