--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoProgettazioneArchitetturale.tex
@@ -32,12 +32,12 @@ In particolar modo:
 \begin{itemize}
 	\item \textbf{Amministratore}: Questo ruolo non si è discostato, dovute al fatto che le attività di suo interesse erano già state portate avanti correttamente a sufficienza nella precedente \glo{fase} e non sono state necessarie ore extra;
 	\item \textbf{Analista}: Per questo ruolo c'è stato un difetto di 3 ore rispetto a quelle preventivate poiché durante la pianificazione oraria si è cercato di essere abbastanza certi nel rimanere entro i tempi per la correzione del documento molto importante di \AdR{};
-	\item \textbf{Progettista}: A differenza della pianificazione svolta, la parte progettuale si è attuata in tempi nettamente inferiori. Questo è dovuto al fatto che il \glo{PoC} da realizzare è stato concentrato su pochi requisiti essenziali per dimostrare la validità
+	\item \textbf{Progettista}: A differenza della pianificazione svolta, la parte progettuale si è attuata in tempi nettamente inferiori. Questo è dovuto al fatto che il \glo{PoC} da realizzare è stato concentrato su pochi \glo{requisiti} essenziali per dimostrare la validità
 	del prodotto che si vuole realizzare. Le ore di progettazione sono state quasi tutte impiegate per comprendere come realizzare l'architettura che permette alle parti del prodotto (app, web-app e server) di comunicare fra loro mentre non ci si è concentrati molto su dettagli
 	di grana più fine che sono invece oggetto della prossima fase preventivata;
 	\item \textbf{Programmatore}: A differenza della pianificazione svolta, la parte di programmazione si è attutata in tempi nettamente maggiori. Ciò è dovuto sia per 
-	l'inesperienza di pianificazione ma anche per problemi legati nella scrittura del codice, sul come integrare le unità software tra di loro e, per quanto riguarda l'app e la web-app, la realizzazione dell'interfaccia grafica;
-	\item \textbf{Verificatore}: A meno di un'ora di differenza, il lavoro necessario per il ruolo di verificatore è stato preventivato correttamente. L'ora extra è stata utilizzata per ulteriori attività di verifica di tipo "Inspection" in punti ritenuti critici.
+	l'inesperienza di pianificazione ma anche per problemi legati nella scrittura del codice, sul come integrare le unità software tra di loro e, per quanto riguarda l'app e la web-app, la realizzazione dell'\glo{interfaccia grafica};
+	\item \textbf{Verificatore}: A meno di un'ora di differenza, il lavoro necessario per il ruolo di verificatore è stato preventivato correttamente. L'ora extra è stata utilizzata per ulteriori attività di \glo{verifica} di tipo "Inspection" in punti ritenuti critici.
 \end{itemize}
 \subsubsection{Ragionamento sugli scostamenti}
 Dalle conclusioni si può notare come nei ruoli in cui è stata acquisita più esperienza si è riusciti a rientrare nei limiti preventivati di budget, mentre per i nuovi ruoli di Progettista e Programmatore c'è stata un'importante differenza.
