--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/RiepilogoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/RiepilogoFinale.tex
@@ -28,7 +28,7 @@ Verificatore    & 245 & +10 &  3675 &  3825 & +150 \\
 }
 
 \subsubsection{Divisione oraria}
-La seguente tabella rappresenta l'effettiva distribuzione oraria dei ruoli per ogni componente del gruppo al termine del progetto. Quanto segnato fra parentesi e dopo il segno di addizione, in ogni cella, corrisponde a quanto svolto nella Fase di Analisi, che non viene rendicontato.
+La seguente tabella rappresenta l'effettiva distribuzione oraria dei ruoli per ogni componente del gruppo al termine del progetto. Quanto segnato fra parentesi e dopo il segno di addizione, in ogni cella, corrisponde a quanto svolto nella \glo{fase} di Analisi, che non viene rendicontato.
 {
 \rowcolors{2}{grigetto}{white}
 \renewcommand{\arraystretch}{2}
