--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio1.tex
@@ -1,4 +1,4 @@
-Si tratta del primo stadio relativo a quella che definiremo fase di analisi. In questa parte i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
+Si tratta del primo stadio relativo a quella che definiremo \glo{fase} di analisi. In questa parte i membri del gruppo si conoscono, prendono le decisioni iniziali, valutano i capitolati, discutono sulle modalità di lavoro da adottare ed avviano la redazione dei primi documenti interni.
         
         \subsubsection{Periodo di svolgimento}
         22 ottobre 2020 - 3 dicembre 2020;
@@ -15,6 +15,6 @@ Si tratta del primo stadio relativo a quella che definiremo fase di analisi. In 
                 \item scelta degli strumenti ed organizzazione dell'ambiente di lavoro;
                 \item scelta del nome del gruppo;
                 \item approfondimento, sia individuale che collettivo, degli strumenti scelti e dei capitolati proposti;
-                \item definizione e redazione delle \NdP{} e dello \SdF{};
+                \item definizione e redazione delle \NdP{} e dello \glo{\SdF{}};
                 \item scelta definitiva del capitolato di interesse.
             \end{itemize}
