--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
@@ -1,4 +1,4 @@
-Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. L'obiettivo principale di questa fase è produrre la documentazione richiesta per il primo incontro di revisione programmato. La positiva conclusione di questo stadio corrisponde di fatto alla prima \glo{milestone} ufficiale del gruppo.
+Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. L'obiettivo principale di questa \glo{fase} è produrre la documentazione richiesta per il primo \glo{incontro formale} di revisione programmato. La positiva conclusione di questo stadio corrisponde di fatto alla prima \glo{milestone} ufficiale del gruppo.
         
         \subsubsection{Periodo di svolgimento}
         4 dicembre 2020 - 11 gennaio 2021;
@@ -13,12 +13,12 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'a
         
         \subsubsection{Obiettivi}
             \begin{itemize}
-                \item verifica e correzione delle \NdP{} e dello \SdF{};
+                \item \glo{verifica} e correzione delle \NdP{} e dello \SdF{};
                 \item redazione \AdR{}:
                 \begin{itemize}
                     \item studio e definizione dei casi d'uso;
-                    \item individuazione, classificazione e codifica dei requisiti di progetto;
-                    \item definizione delle modalità di tracciamento.
+                    \item individuazione, classificazione e codifica dei \glo{requisiti} di progetto;
+                    \item definizione delle modalità di \glo{tracciamento}.
                 \end{itemize}
                 \item redazione \PdQ{};
                 \begin{itemize}
@@ -33,5 +33,5 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'a
                     \item calcolo del preventivo iniziale relativo allo svolgimento del lavoro;
                 \end{itemize}
                 \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-                \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RR{}.
+                \item consegna del \glo{deliverable} necessario, in vista dell'\glo{incontro formale} con il committente per la \RR{}.
             \end{itemize}
