--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -1,4 +1,4 @@
-Una volta approvati i requisiti di ingresso, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la fase progettuale attraverso un primo stadio intermedio. Appoggiandosi all'\AdR{}, in questo periodo lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
+Una volta approvati i \glo{requisiti} di ingresso, in seguito all'aggiudicazione ufficale del capitolato, il gruppo procede verso la \glo{fase} progettuale attraverso un primo stadio intermedio. Appoggiandosi all'\AdR{}, in questo periodo lo scopo principale è definire e preparare tutti gli aspetti preliminari allo sviluppo vero e proprio, avviando così la progettazione architetturale del prodotto.
         
         \subsubsection{Periodo di svolgimento}
         18 gennaio 2021 - 27 gennaio 2021;
