--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
@@ -1,4 +1,4 @@
-Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo stadio conclude la fase di progettazione al dettaglio ed inzia quella di sviluppo. Viene prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo funzionante del sistema, avente le minime funzionalità essenziali e basilari. 
+Da qui in poi si entra nella parte più specifica di costruzione del sistema. Questo stadio conclude la \glo{fase} di progettazione al dettaglio ed inzia quella di sviluppo. Viene prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo funzionante del sistema, avente le minime funzionalità essenziali e basilari. 
         
         \subsubsection{Periodo di svolgimento}
         28 gennaio 2021 - 14 febbraio 2021;
@@ -19,7 +19,7 @@ Da qui in poi si entra nella parte più specifica di costruzione del sistema. Qu
             \begin{itemize}
                 \item tali componenti verranno specificati più in dettaglio nei futuri aggiornamenti del presente documento, una volta stabiliti gli incrementi necessari.
             \end{itemize}
-            \item progettazione di base delle interfacce utente;
-            \item verifica del codice e delle funzionalità del prodotto;
+            \item progettazione di base delle \glo{interfacce} utente;
+            \item \glo{verifica} del codice e delle funzionalità del prodotto;
             \item aggiornamento della documentazione.
         \end{itemize}
