--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -1,1 +1,1 @@
-Di seguito verrà riportata e descritta la struttura generale in cui verrà organizzato l'intero processo di lavoro. In questo caso sono stati specificati in totale sette stadi e tra di essi si possono riconoscere essenzialmente quattro fasi: analisi, progettazione, codifica e validazione. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso.\\
+Di seguito verrà riportata e descritta la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette stadi e tra di essi si possono riconoscere essenzialmente quattro fasi: analisi, progettazione, codifica e \glo{validazione}. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso.\\
