--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
@@ -93,7 +93,7 @@ Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e 
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Fase}} &
-\textcolor{\secondaryColor}{\textbf{Costo fase (in \euro{})}}\\	
+\textcolor{\secondaryColor}{\textbf{Costo \glo{fase} (in \euro{})}}\\	
 \endhead
 		
 Progettazione Architetturale          &  x \\
