--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -1,6 +1,6 @@
 \subsection{Analisi dei Requisiti}
 \subsubsection{Bilancio}
-Il bilancio della fase di Analisi è negativo, ovvero il gruppo ha impiegato più ore di quelle anticipate, quindi il costo finale della fase di Analisi supera l'aspettativa calcolata in precedenza.\\
+Il bilancio della \glo{fase} di Analisi è negativo, ovvero il gruppo ha impiegato più ore di quelle anticipate, quindi il costo finale della fase di Analisi supera l'aspettativa calcolata in precedenza.\\
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 
 {
@@ -32,7 +32,7 @@ Verificatore    &  x &  x & x & x & x \\
 Come riportato dalla tabella, il bilancio risulta essere negativo per un eccesso di ore nei seguenti ruoli:
 \begin{itemize}
 	\item \textbf{Amministratore}: È stata sottostimata l'assegnazione delle ore per la stesura delle \NdP{}, la gestione della documentazione è stata più onerosa di quanto preventivato inizialmente e non è stata fatta una giusta ed esaustiva definizione delle tecnologie per le quali è stata necessaria una loro revisione;
-	\item \textbf{Analista}: Sono servite più ore del previsto per ottenere una struttura coesa e dettagliata dei requisiti;
+	\item \textbf{Analista}: Sono servite più ore del previsto per ottenere una struttura coesa e dettagliata dei \glo{requisiti};
 	\item \textbf{Verificatore}: Un lavoro maggiore degli analisti e amministratori ha portato ad un dispendio di ore di verifica superiore rispetto alle aspettative.
 \end{itemize}
 
@@ -41,5 +41,5 @@ In relazione alle motivazioni espresse nelle conclusioni, possiamo affermare che
 Dunque, alla luce di questa problematica, pensiamo che nelle fasi di Progettazione riscontreremo le stesse difficoltà. Come soluzione a questo problema presteremo più attenzione nella pianificazione delle attività meno conosciute. Mentre per la produzione dei documenti, grazie all'esperienza acquisita, possiamo ridurre il margine utile ad assorbire eventuali ritardi.
 
 \subsubsection{Preventivo a finire}
-Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.\\
+Il costo effettivo di questa prima \glo{fase} non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.\\
 Ciò non toglie che, come evidenziato ragionando sugli scostamenti, il gruppo deve prestare più attenzione e ottimizzare il proprio tempo al fine di evitare di superare il preventivo stabilito. 
