--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
@@ -1,4 +1,4 @@
-Il gruppo \Gruppo{} intende realizzare il progetto \NomeProgetto{} rispettando le seguenti principali \glo{milestone}:
+Il gruppo \Gruppo{} intende realizzare il progetto \NomeProgetto{} rispettando le seguenti principali date di \glo{milestone}:
 \begin{itemize}
     \item \textbf{Revisione dei Requisiti}: 11 gennaio 2021;
     \item \textbf{Revisione di Progettazione}: 1 marzo 2021;
