--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
@@ -1,4 +1,4 @@
-A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo stadio corrisponde ad una prima parte della fase di validazione ed il raggiungimento dei suoi obiettivi corrispinde alla terza \glo{milestone} principale del progetto. Lo scopo di fondo è ultimare la parte di implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
+A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo stadio corrisponde ad una prima parte della \glo{fase} di \glo{validazione} ed il raggiungimento dei suoi obiettivi corrispinde alla terza \glo{milestone} principale del progetto. Lo scopo di fondo è ultimare la parte di implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo \glo{incontro formale} di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         8 marzo 2021 - 2 aprile 2021;
@@ -15,13 +15,13 @@ A questo punto si presuppone di avere un prodotto sufficientemente funzionante m
         \subsubsection{Obiettivi}
         \begin{itemize}
             \item correzione della documentazione secondo le indicazioni del committente;
-            \item implementazione delle componenti restanti aggiuntive ed eventuale soddisfacimento dei requisiti facoltativi;
+            \item implementazione delle componenti restanti aggiuntive ed eventuale soddisfacimento dei \glo{requisiti} facoltativi;
             \item controllo, implementazione e correzione degli aspetti qualitativi del prodotto;
             \begin{itemize}
                 \item tali aspetti sono da riferirsi allo studio fatto nel documento \PdQ{}. %(potrei sbagliarmi)
             \end{itemize}
             \item copertura minima dei test all'80\% con relativo resoconto;
-            \item verifica del codice e delle funzionalità del prodotto;
+            \item \glo{verifica} del codice e delle funzionalità del prodotto;
             \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-            \item consegna del \glo{deliverable} in vista dell'incontro con il committente per la \RQ{}.
+            \item consegna del \glo{deliverable} in vista dell'\glo{incontro formale} con il committente per la \RQ{}.
         \end{itemize}
