--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
@@ -1,4 +1,4 @@
-L'ultimo stadio conclude la fase di validazione e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i requisiti richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
+L'ultimo stadio conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo \glo{incontro formale} di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         9 aprile 2021 - 3 maggio 2021;
@@ -17,7 +17,7 @@ L'ultimo stadio conclude la fase di validazione e prevede il controllo e la rifi
         \begin{itemize}
             \item correzione della documentazione secondo le direttive del committente;
             \item aggiunta e/o finalizzazione degli aspetti rimasti in sospeso o eventualmente incompleti dalle fasi precedenti;
-            \item verifica finale del codice e delle funzionalità del prodotto;
+            \item \glo{verifica} finale del codice e delle funzionalità del prodotto;
             \begin{itemize}
                 \item con conseguente collaudo interno.
             \end{itemize}
@@ -28,5 +28,5 @@ L'ultimo stadio conclude la fase di validazione e prevede il controllo e la rifi
                 \item redazione di un preventivo a finire dettagliato e più preciso;
                 \item verifica e correzione.
             \end{itemize}
-            \item consegna di tutto il \glo{deliverable}, in vista dell'incontro con il committente per la \RA{}.
+            \item consegna di tutto il \glo{deliverable}, in vista dell'\glo{incontro formale} con il committente per la \RA{}.
         \end{itemize}
