--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
@@ -24,8 +24,8 @@ I casi d'uso devono essere opportunamente corredati da:
     \item \textbf{Scopo}: scopo del caso d'uso;
     \item \textbf{Precondizioni}: condizioni che devono essere verificate affinch\'{e} gli eventi descritti si verifichino;
     \item \textbf{Postcondizioni}: condizioni che devono essere verificarsi alla conclusione degli eventi descritti; 
-    \item \textbf{Flusso principale}: flusso principale degli eventi, in forma di elenco numerato, con eventuale riferimento ad ulteriori casi d'uso.
-    \item \textbf{Scenario alternativo}: indicazione di uno scenario alternativo \emph{(se presente)}
-    \item \textbf{Estensioni}: indicazione delle estensioni \emph{(se presenti)}
-    \item \textbf{Inclusioni}: indicazione delle inclusioni \emph{(se presenti)} 
+    \item \textbf{Flusso principale}: flusso principale degli eventi, in forma di elenco numerato, con eventuale riferimento ad ulteriori casi d'uso;
+    \item \textbf{Scenario alternativo}: indicazione di uno scenario alternativo \emph{(se presente)};
+    \item \textbf{Estensioni}: indicazione delle estensioni \emph{(se presenti)};
+    \item \textbf{Inclusioni}: indicazione delle inclusioni \emph{(se presenti)}.
 \end{itemize}
