--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
@@ -2,7 +2,7 @@ La technology baseline descrive ed eventualmente motiva le decisioni prese dal g
 
 \begin{itemize}
     \item \textbf{Tecnologie utilizzate}: descrizione dettagliata delle tecnologie utilizzate, indicando linguaggi,  framework e librerie utilizzati;
-    \item \textbf{Tracciamento delle componenti}: associazione tra requisiti e componenti che li soddisfano.
+    \item \textbf{Tracciamento delle componenti}: associazione tra requisiti e componenti che li soddisfano;
     \item \textbf{Test di integrazione}: descrizione dei test eseguiti per verificare che i componenti interagiscano in maniera corretta tra di loro per soddisfare i requisiti.
 \end{itemize}
 
